Adding Netlify forms

--- a/src/contact.html
+++ b/src/contact.html
@@ -25,8 +25,8 @@
     </div>
 
     <div class="form-style" data-aos="fade-right" data-aos-duration="1000">
-        <form name="contact" method="POST" data-netlify="true" onSubmit="submit"
-        data-netlify-honeypot="bot-field" class="relative z-10">
+        <form class="relative z-10" name="contact" method="POST" data-netlify="true" onSubmit="submit"
+        data-netlify-honeypot="bot-field" >
         <input class="hidden" name="bot-field">
             <div class="flex flex-wrap">
                 <div class="lg:flex-1 lg:mb-4 mb-8 flex-auto pr-6 pl-6 w-full">
