--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
 
             <div class="flex p-4 mb-8 w-full md:w-1/2 lg:w-1/3" data-aos="zoom-in" data-aos-duration="1000"> <!-- card -->
                 <div class="card-style"> <!-- card -->
-                    <div class="bg-contain bg-center bg-no-repeat bg-member_one h-48"></div> <!-- card content image. CUSTOMITZAR url i treurela daqui-->
+                    <div class="bg-contain bg-center bg-no-repeat bg-member_one h-48"></div> <!-- card content image -->
                     <div class="flex flex-col flex-auto p-4"> <!-- card content text-->
                             <p class="text-base text-center font-bold mb-4">Irene Campaña</p> <!-- card content text title -->
                             <hr class="m-4">
@@ -37,8 +37,8 @@
 
 
             <div class="flex p-4 mb-8 w-full md:w-1/2 lg:w-1/3" data-aos="zoom-in" data-aos-duration="1000"> <!-- card -->
-                <div class="card-style"> <!-- card content. CUSTOMITZAR rounded-lg de 8px a 10px i box shadow i transition-->
-                    <div class="bg-contain bg-center bg-no-repeat bg-member_two h-48"></div> <!-- card content image. CUSTOMITZAR url i treurela daqui-->
+                <div class="card-style"> <!-- card content -->
+                    <div class="bg-contain bg-center bg-no-repeat bg-member_two h-48"></div> <!-- card content image -->
                     <div class="flex flex-col flex-auto p-4"> <!-- card content text-->
                         <p class="text-base text-center font-bold mb-4">Ricardo Gomez</p> <!-- card content text title -->
                         <hr class="m-4">
@@ -48,8 +48,8 @@
             </div>
 
             <div class="flex p-4 mb-8 w-full md:w-1/2 lg:w-1/3" data-aos="zoom-in" data-aos-duration="1000"> <!-- card -->
-                <div class="card-style"> <!-- card content. CUSTOMITZAR rounded-lg de 8px a 10px i box shadow i transition-->
-                    <div class="bg-contain bg-center bg-no-repeat bg-member_three h-48"></div> <!-- card content image. CUSTOMITZAR url i treurela daqui-->
+                <div class="card-style"> <!-- card content -->
+                    <div class="bg-contain bg-center bg-no-repeat bg-member_three h-48"></div> <!-- card content image -->
                     <div class="flex flex-col flex-auto p-4"> <!-- card content text-->
                         <p class="text-base text-center font-bold mb-4">Javier Fernandez</p> <!-- card content text title -->
                         <hr class="m-4">
@@ -59,8 +59,8 @@
             </div>
 
             <div class="flex p-4 mb-8 w-full md:w-1/2 lg:w-1/3" data-aos="zoom-in" data-aos-duration="1000"> <!-- card -->
-                <div class="card-style"> <!-- card content. CUSTOMITZAR rounded-lg de 8px a 10px i box shadow i transition-->
-                    <div class="bg-contain bg-center bg-no-repeat bg-member_four h-48"></div> <!-- card content image. CUSTOMITZAR url i treurela daqui-->
+                <div class="card-style"> <!-- card content -->
+                    <div class="bg-contain bg-center bg-no-repeat bg-member_four h-48"></div> <!-- card content image -->
                     <div class="flex flex-col flex-auto p-4"> <!-- card content text-->
                         <p class="text-base text-center font-bold mb-4">Maria Silva</p> <!-- card content text title -->
                         <hr class="m-4">
@@ -70,8 +70,8 @@
             </div>
 
             <div class="flex p-4 mb-8 w-full md:w-1/2 lg:w-1/3" data-aos="zoom-in" data-aos-duration="1000"> <!-- card -->
-                <div class="card-style"> <!-- card content. CUSTOMITZAR rounded-lg de 8px a 10px i box shadow i transition-->
-                    <div class="bg-contain bg-center bg-no-repeat bg-member_five h-48"></div> <!-- card content image. CUSTOMITZAR url i treurela daqui-->
+                <div class="card-style"> <!-- card content -->
+                    <div class="bg-contain bg-center bg-no-repeat bg-member_five h-48"></div> <!-- card content image -->
                     <div class="flex flex-col flex-auto p-4"> <!-- card content text-->
                         <p class="text-base text-center font-bold mb-4">Diego Morales</p> <!-- card content text title -->
                         <hr class="m-4">
@@ -81,8 +81,8 @@
             </div>
 
             <div class="flex p-4 mb-8 w-full md:w-1/2 lg:w-1/3" data-aos="zoom-in" data-aos-duration="1000"> <!-- card -->
-                <div class="card-style"> <!-- card content. CUSTOMITZAR rounded-lg de 8px a 10px i box shadow i transition-->
-                    <div class="bg-contain bg-center bg-no-repeat bg-member_six h-48"></div> <!-- card content image. CUSTOMITZAR url i treurela daqui-->
+                <div class="card-style"> <!-- card content -->
+                    <div class="bg-contain bg-center bg-no-repeat bg-member_six h-48"></div> <!-- card content image -->
                     <div class="flex flex-col flex-auto p-4"> <!-- card content text-->
                         <p class="text-base text-center font-bold mb-4">Samuel Serra</p> <!-- card content text title -->
                         <hr class="m-4">
